Spacing fix!

--- a/src/App.css
+++ b/src/App.css
@@ -177,6 +177,7 @@ footer {
 
 .container {
   max-width: 1100px;
+  padding: 1px;
   height: auto;
   margin: 60px auto;
 }
